--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "sussy-cli",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "**sussy-cli** is a versatile command-line tool designed for ease of use and productivity. Simplify your tasks with user-friendly commands and customization.",
+  "types": "./build/index.d.ts",
   "main": ".\\build\\index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "cli",
+    "command-line",
+    "cli-tool",
+    "command-line-tool",
+    "command-line-interface"
+  ],
+  "author": "roteKlaue",
   "license": "GPL-3.0",
   "dependencies": {
     "chalk": "^5.3.0",
-    "fix-esm": "^1.0.1",
     "sussy-util": "^12.0.0"
   },
   "devDependencies": {
